# Revsni

./: .gitignore  Readme.md  Revsni.code-workspace  To-Do  To-Do2  initial.txt  output.txt  pom.xml
Cevsn/: Cevsn.cs  Cevsn.csproj  Hevsn.cs  Mevsn.cs  Pevsn.cs  Privsn.cs  Readme.md  Tevsn.cs  \Cevsn
Cevsn/Encrn/: AES.cs  Blowfish.cs  RSA.cs
Cevsn/Properties/: AssemblyInfo.cs
Devsn/: Devsn.sln  Devsn.vcxproj  dllmain.cpp  pch.cpp
Devsn/Debug/: Devsn.dll.recipe  Devsn.ilk  Devsn.vcxproj.FileListAbsolute.txt  vc142.idb
Geffsn/Geffsn/: pom.xml
Plusn/: Makefile  Makefile-Old
Plusn/src/: Plusn  Plusn.cpp  main
Pyvsn/: README.md  main.py
Pyvsn/client/: client.py
Pyvsn/server/: server.py
Pyvsn/src/: main.py
Rawvsn/: Rawvsn.c
Suvsn/: shelly.asm  suvsn.c
To-Do/: GUI To-Do.txt  Ideen.txt  Java Client To-Do.txt  NET Client To-Do.txt  Server To-Do.txt
To-Do/Clients/: C Client.txt  C++ Client.txt  Java Client To-Do.txt
To-Do/GUI/: Geffsn.txt
To-Do/Server/: Server To-Do.txt
To-Do/Web/: Websn.txt
revsni/: Readme.md  output.txt  pom.xml
revsni/filehosting/: 0319862a-dc5a-44db-bba6-823aeb5d3007.txt  03cc32e0-d35b-4df9-b45e-e022d0adf691.txt  05dd5d29-a66a-4fbe-bd3b-9a9ec2a735da.txt  07ecdb5c-9a66-4768-91d3-fcb621fd6aab.txt  094eb5b1-76cf-466f-b7fa-30bd7ada9eb8.txt  0b8cb294-56d1-49a4-83c2-66d42d422ac2.txt  11fc0a24-c5c3-4481-8428-f397c714f36b.txt  2811e4b7-88f5-4417-9923-1d66aab70eb6.txt  (+38 more)
ruvsn/: Cargo.toml
ruvsn/src/: configuration.rs  main.rs  server.rs  updater.rs
ruvsn/src/encryption/: aes.rs
ruvsn/src/protocols/: http.rs  mod.rs  tcp.rs
(+117 files in other folders)
