[package]
name = "ruvsn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bytes = "1.2.1"
futures = "0.3.23"
lazy_static = "1.4.0"
rand = "0.8.5"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
tokio = {version = "1.20.1", features = ["full"]}
uuid = "1.1.2"
